src/test/deca/context/invalid/resultats/test_LEQ_class-cont.res
./src/test/deca/context/invalid/test_LEQ_class.deca:23:15: The types are incompatible for a Inequality Operation
